--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="./pages/about.html">About</a></li>
         <li><a href="./pages/resume.html">Resume/CV</a></li>
         <li><a href="./pages/projects.html">Projects</a></li>
-        <li><a href="./pages/contact.html">Contact Page</a></li>
+        <li><a href="./pages/contact.html">Contact</a></li>
       </ul>
     </nav>
     <div class="banner">
