--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,16 +9,22 @@
 <body>
   <header>
     <nav>
-      <a href="./index.html">
+      <a href="../index.html">
         <h1>Farzin Portfolio</h1>
       </a>
       <ul>
         <li><a href="./about.html">About</a></li>
         <li><a href="./resume.html">Resume/CV</a></li>
         <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./contact.html">Contact Page</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
+
+  <section id="projects">
+    <div class="container">
+      <h1>Under construction 🚧👷⛔</h1>
+    </div>
+  </section>
 </body>
 </html>
