--- a/pages/resume.html
+++ b/pages/resume.html
@@ -11,14 +11,14 @@
 <body>
   <header>
     <nav>
-      <a href="./index.html">
+      <a href="../index.html">
         <h1>Farzin Portfolio</h1>
       </a>
       <ul>
         <li><a href="./about.html">About</a></li>
         <li><a href="./resume.html">Resume/CV</a></li>
         <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./contact.html">Contact Page</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -97,6 +97,12 @@
           <li>Responsible for JavaScript / AJAX UI upgrades and improvements.</li>
           <li>Designed web pages using with HTML, CSS based on the W3C standards.</li>
         </ul>
+      </div>
+      
+      <div class="education-resume">
+        <h2>Education</h2>
+        <div><b>Southern Illinois University</b> - Master of Science</div>
+        
       </div>
 
       <div class="tech-proficiency">
